[gd_scene load_steps=3 format=3 uid="uid://ov4od7ob2ejl"]

[ext_resource type="Script" path="res://Scenes and scripts/Menus/save_load_options.gd" id="1_4ict3"]
[ext_resource type="FontFile" uid="uid://bsgngl7m1e6g7" path="res://assets/fonts/PixelOperator8.ttf" id="2_vmcsi"]

[node name="SaveLoadOptions" type="HBoxContainer"]
offset_right = 1004.0
offset_bottom = 260.0
script = ExtResource("1_4ict3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vmcsi")
theme_override_font_sizes/font_size = 32
text = "Save"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vmcsi")
theme_override_font_sizes/font_size = 32
text = "Load"

[node name="ClearButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vmcsi")
theme_override_font_sizes/font_size = 32
text = "Clear Saves"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[connection signal="focus_entered" from="VBoxContainer/SaveButton" to="." method="_on_save_button_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/SaveButton" to="." method="_on_save_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/LoadButton" to="." method="_on_load_button_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/LoadButton" to="." method="_on_load_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/ClearButton" to="." method="_on_clear_button_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/ClearButton" to="." method="_on_clear_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
